# PermutaTJ

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: auto-clang-format.yml  ci.yml
scripts/: build-with-docker.sh
src/: CMakeLists.txt  exchangetj.cpp  exchangetj.h  main.cpp  match_seeker.cpp  match_seeker.h  menu.cpp  menu.h  originalCMakeLists.txt  person.cpp  person.h
src/exchangetj/: CMakeLists.txt
src/exchangetj/src/: exchangetj.cpp
src/main/: CMakeLists.txt
src/main/src/: main.cpp
test/: CMakeLists.txt  match_seeker_test.cpp  person_test.cpp  tests.cpp
